<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/colores"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.exj.jc.mapu.colores"
    android:layout_gravity="center_vertical|center_horizontal|center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_weight="8">

        <TextView
            android:id="@+id/textViewColors"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical|center"
            android:textSize="50dp"
            android:textColor="#FCFAF8"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical|center"
        android:layout_weight="1">

        <Button
            android:text="@string/btn_rojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRojo"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCafe"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_verde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonVerde"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_amarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAmarillo"
            android:layout_weight="1"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_weight="1">

        <Button
            android:text="@string/btn_azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAzul"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_gris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGris"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_morado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMorado"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_naranjo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNaranjo"
            android:layout_weight="1"
            android:onClick="onClick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical|center"
        android:layout_weight="1">

        <Button
            android:text="@string/btn_blanco"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBlanco"
            android:onClick="onClick" />

        <Button
            android:text="@string/btn_negro"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNegro"
            android:onClick="onClick" />

    </LinearLayout>

</LinearLayout>
