<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.exj.jc.mapu.principal">


    <Button
        android:text="@string/btn_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonNumero"
        tools:text="@string/btn_numero"
        android:onClick="presionNumero" />

    <Button
        android:text="@string/btn_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonColores" />

    <Button
        android:text="@string/btn_animales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAnimales" />

    
</LinearLayout>
