<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numeros"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.exj.jc.mapu.Numeros"
    android:background="@android:color/background_dark">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/textviewCambia"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FCFAF8"
            android:textSize="90dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/textViewNumbers"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FCFAF8"
            android:textSize="50dp"
            android:layout_weight="1"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionUno"
                android:text="@string/btn_uno"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionDos"
                android:text="@string/btn_dos"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionTres"
                android:text="@string/btn_tres"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionCuatro"
                android:text="@string/btn_cuatro"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionCinco"
                android:text="@string/btn_cinco"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionSeis"
                android:text="@string/btn_seis"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionSiete"
                android:text="@string/btn_siete"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionOcho"
                android:text="@string/btn_ocho"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionNueve"
                android:text="@string/btn_nueve"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionDiez"
                android:text="@string/btn_diez"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button100"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionCien"
                android:text="@string/btn_cien"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionMil"
                android:text="@string/btn_mil"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
